scss/_aboutUsPage.scss
.aboutUs-heading-image {
    margin-top: -53.5px;
    background: $lightColor;
    background-image: url(../img/aboutUsHead.png) !important;
    background-repeat: no-repeat;
    background-position: center;
    background-size: contain;
    width: 100%;
    height: 380px;
}

