fixed aligns and spacing for about us page

--- a/scss/_aboutUsPage.scss
+++ b/scss/_aboutUsPage.scss
@@ -3,8 +3,23 @@
     background: $lightColor;
     background-image: url(../img/aboutUsHead.png) !important;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: bottom center;
     background-size: contain;
     width: 100%;
-    height: 380px;
+    height: 30vh;
+
+}
+
+video {
+    width: 100%;
+    max-width: 585px;
+    height: 100%;
+    max-height: 300px;
+
+    background: #000000;
+    box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.35);
+}
+
+.about-content {
+    padding-bottom: 40px;
 }
